# conformer-rs

./: .gitignore  README.md  help.md
conformer-python/: README.md  benchmark_litert.py  compile_for_npu.py  convert_muaalem_to_onnx.py  convert_tiny_to_tflite.py  download_compiled.py  download_profile_results.py  export_onnx.py  parse_profile_results.py  profile_npu.py  pyproject.toml  run_muaalem_onnx.py  run_onnx.py
conformer-python/src/: __init__.py
conformer-python/src/conformer_python/: __init__.py
conformer-python/src/conformer_python/muaalem_offline/: __init__.py  modeling_multi_level_ctc.py  multi_level_tokenizer.py  vocab.py
conformer-rs/: Cargo.toml  README.md
conformer-rs/src/: main.rs
conformer-rten/: Cargo.toml
conformer-rten/src/: main.rs
