[project]
name = "conformer-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.0",
    "onnxsim>=0.6.2",
    "quran-transcript>=0.5.2",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
