[project]
name = "conformer-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "einops>=0.8.2",
    "onnx>=1.21.0",
    "onnxruntime>=1.25.0",
    "onnxscript>=0.7.0",
    "onnxsim>=0.6.2",
    "quran-transcript>=0.5.2",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "litert-torch>=0.9.0",
    "ai-edge-litert>=2.1.0",
    "ai-edge-quantizer>=0.4.0",
    "qai-hub>=0.20.0",
]

[tool.uv]
override-dependencies = [
    "typing-extensions>=4.14.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
